--- a/latex/_request_8h_source.tex
+++ b/latex/_request_8h_source.tex
@@ -10,18 +10,20 @@
 \DoxyCodeLine{00012\ \textcolor{keyword}{using\ namespace\ }std;}
 \DoxyCodeLine{00013\ }
 \DoxyCodeLine{00018\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_request}{Request}}\{}
-\DoxyCodeLine{00019\ \ \ \ \ \textcolor{keywordtype}{string}\ incomingIP;}
-\DoxyCodeLine{00020\ \ \ \ \ \textcolor{keywordtype}{string}\ outgoingIP;}
-\DoxyCodeLine{00021\ \ \ \ \ }
-\DoxyCodeLine{00022\ \ \ \ \ \textcolor{keywordtype}{int}\ time;\ \textcolor{comment}{//Time\ required\ to\ process\ the\ job}}
-\DoxyCodeLine{00023\ \ \ \ \ \textcolor{keywordtype}{char}\ jobType;}
-\DoxyCodeLine{00024\ }
-\DoxyCodeLine{00028\ \ \ \ \ \mbox{\hyperlink{struct_request_afaf8d8928de7ffff8a3767589489bd33}{Request}}()\ :\ incomingIP(\textcolor{stringliteral}{"{}"{}}),\ outgoingIP(\textcolor{stringliteral}{"{}"{}}),\ time(0),\ jobType(\textcolor{stringliteral}{'P'})\{\}}
-\DoxyCodeLine{00029\ }
-\DoxyCodeLine{00037\ \ \ \ \ \mbox{\hyperlink{struct_request_a63f5c571f24f824805adc508d6fca4bf}{Request}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ in,\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ out,\ \textcolor{keywordtype}{int}\ t,\ \textcolor{keywordtype}{char}\ type):\ incomingIP(in),\ outgoingIP(out),\ time(t),\ jobType(type)\{\}}
+\DoxyCodeLine{00022\ \ \ \ \ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{struct_request_a7caad431f773660f46ccbc68b8836116}{incomingIP}};}
+\DoxyCodeLine{00023\ }
+\DoxyCodeLine{00027\ \ \ \ \ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{struct_request_a3f7eb9694fb80ef13bc3abbfa4adfc0d}{outgoingIP}};}
+\DoxyCodeLine{00028\ }
+\DoxyCodeLine{00032\ \ \ \ \ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{struct_request_a3cfb576ed0b5e08612f3de8bc7cd72e2}{time}};}
+\DoxyCodeLine{00033\ }
+\DoxyCodeLine{00037\ \ \ \ \ \textcolor{keywordtype}{char}\ \mbox{\hyperlink{struct_request_ad49a0f18615ea50f9a11cd2494c93044}{jobType}};}
 \DoxyCodeLine{00038\ }
-\DoxyCodeLine{00039\ \};}
-\DoxyCodeLine{00040\ }
-\DoxyCodeLine{00041\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00042\ \ \ \ \ \mbox{\hyperlink{struct_request_afaf8d8928de7ffff8a3767589489bd33}{Request}}()\ :\ \mbox{\hyperlink{struct_request_a7caad431f773660f46ccbc68b8836116}{incomingIP}}(\textcolor{stringliteral}{"{}"{}}),\ \mbox{\hyperlink{struct_request_a3f7eb9694fb80ef13bc3abbfa4adfc0d}{outgoingIP}}(\textcolor{stringliteral}{"{}"{}}),\ \mbox{\hyperlink{struct_request_a3cfb576ed0b5e08612f3de8bc7cd72e2}{time}}(0),\ \mbox{\hyperlink{struct_request_ad49a0f18615ea50f9a11cd2494c93044}{jobType}}(\textcolor{stringliteral}{'P'})\{\}}
+\DoxyCodeLine{00043\ }
+\DoxyCodeLine{00051\ \ \ \ \ \mbox{\hyperlink{struct_request_a63f5c571f24f824805adc508d6fca4bf}{Request}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ in,\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ out,\ \textcolor{keywordtype}{int}\ t,\ \textcolor{keywordtype}{char}\ type):\ \mbox{\hyperlink{struct_request_a7caad431f773660f46ccbc68b8836116}{incomingIP}}(in),\ \mbox{\hyperlink{struct_request_a3f7eb9694fb80ef13bc3abbfa4adfc0d}{outgoingIP}}(out),\ \mbox{\hyperlink{struct_request_a3cfb576ed0b5e08612f3de8bc7cd72e2}{time}}(t),\ \mbox{\hyperlink{struct_request_ad49a0f18615ea50f9a11cd2494c93044}{jobType}}(type)\{\}}
+\DoxyCodeLine{00052\ }
+\DoxyCodeLine{00053\ \};}
+\DoxyCodeLine{00054\ }
+\DoxyCodeLine{00055\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
