--- a/latex/struct_request.tex
+++ b/latex/struct_request.tex
@@ -22,16 +22,16 @@ Represents a network request with IP addresses, processing time, and job type.
 \item 
 \Hypertarget{struct_request_a7caad431f773660f46ccbc68b8836116}\label{struct_request_a7caad431f773660f46ccbc68b8836116} 
 string {\bfseries incoming\+IP}
-\item 
+\begin{DoxyCompactList}\small\item\em The incoming IP address. \end{DoxyCompactList}\item 
 \Hypertarget{struct_request_a3f7eb9694fb80ef13bc3abbfa4adfc0d}\label{struct_request_a3f7eb9694fb80ef13bc3abbfa4adfc0d} 
 string {\bfseries outgoing\+IP}
-\item 
+\begin{DoxyCompactList}\small\item\em The outgoing IP address. \end{DoxyCompactList}\item 
 \Hypertarget{struct_request_a3cfb576ed0b5e08612f3de8bc7cd72e2}\label{struct_request_a3cfb576ed0b5e08612f3de8bc7cd72e2} 
 int {\bfseries time}
-\item 
+\begin{DoxyCompactList}\small\item\em Time required to process the job. \end{DoxyCompactList}\item 
 \Hypertarget{struct_request_ad49a0f18615ea50f9a11cd2494c93044}\label{struct_request_ad49a0f18615ea50f9a11cd2494c93044} 
 char {\bfseries job\+Type}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Job type (\textquotesingle{}P\textquotesingle{} for processing, \textquotesingle{}S\textquotesingle{} for streaming). \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
