--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -241,11 +241,13 @@
 \input{struct_request}
 \input{class_web_server}
 \chapter{File Documentation}
+\input{_load_balancer_8cpp}
 \input{_load_balancer_8h}
 \input{_load_balancer_8h_source}
 \input{main_8cpp}
 \input{_request_8h}
 \input{_request_8h_source}
+\input{_web_server_8cpp}
 \input{_web_server_8h}
 \input{_web_server_8h_source}
 %--- End generated contents ---
